<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/menuJokes">

    <fragment
        android:id="@+id/menuJokes"
        android:name="com.example.jokesapp.fragment.JokeListFragment"
        android:label="@string/jokes"
        tools:layout="@layout/fragment_joke_list" />

    <fragment
        android:id="@+id/menuFavorites"
        android:name="com.example.jokesapp.fragment.FavoriteJokesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/menuCategories"
        android:name="com.example.jokesapp.fragment.JokeCategoryFragment"
        android:label="@string/categories"
        tools:layout="@layout/fragment_joke_category" />

</navigation>
