<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivFavorite"
                android:layout_width="@dimen/_25dp"
                android:layout_height="@dimen/_25dp"
                android:contentDescription="@string/favorite_toggle"
                android:src="@android:drawable/btn_star_big_off" />

            <ImageView
                android:id="@+id/ivShare"
                android:layout_width="@dimen/_25dp"
                android:layout_height="@dimen/_25dp"
                android:layout_marginStart="@dimen/_10dp"
                android:contentDescription="@string/share_action"
                android:src="@drawable/ic_share" />

        </LinearLayout>

        <TextView
            android:text="@string/language"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/joke"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp" />

        <TextView
            android:id="@+id/tvJoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp" />

    </LinearLayout>

</ScrollView>
